@@ -274,10 +274,11 @@ void M_ChatStrings(int);
 void M_InitExtendedHelp(void);
 void M_ExtHelpNextScreen(int);
 void M_ExtHelp(int);
-int  M_GetPixelWidth(char*);
+static int M_GetPixelWidth(const char*);
 void M_DrawKeybnd(void);
 void M_DrawWeapons(void);
-void M_DrawMenuString(int,int,int);
+static void M_DrawMenuString(int,int,int);
+static void M_DrawStringCentered(int,int,int,const char*);
 void M_DrawStatusHUD(void);
 void M_DrawExtHelp(void);
 void M_DrawAutoMap(void);
@@ -1787,7 +1788,7 @@ static unsigned char colchip[171];
 
 static patch_t *M_MakeColChip(byte chipcol, byte framecol)
 {
-  int i;
+  unsigned int i;
 
   for (i=0; i<sizeof(colchipsrc); i++)
     if (colchipsrc[i]==4)
@@ -2042,62 +2043,63 @@ static void M_DrawDefVerify(void)
 // phares 4/18/98:
 // M_DrawInstructions writes the instruction text just below the screen title
 //
-// killough 8/15/98: rewritten
+// cph 2006/08/06 - go back to the Boom version, and then clean up by using
+// M_DrawStringCentered (much better than all those magic 'x' valies!)
 
-void M_DrawInstructions(void)
+static void M_DrawInstructions(void)
 {
   int flags = current_setup_menu[set_menu_itemon].m_flags;
-
-#if 0
-  default_t *def = current_setup_menu[set_menu_itemon].var.def;
-  // killough 8/15/98: warn when values are different
-  if (flags & (S_NUM|S_YESNO) && def->current && *def->current!=*def->location.pi)
-    {
-      int allow = allow_changes() ? 8 : 0;
-      if (!(setup_gather | print_warning_about_changes | demoplayback))
-  {
-    strcpy(menu_buffer,
-     "Warning: Current actual setting differs from the");
-    M_DrawMenuString(4, 184-allow, CR_RED);
-    strcpy(menu_buffer,
-     "default setting, which is the one being edited here.");
-    M_DrawMenuString(4, 192-allow, CR_RED);
-    if (allow)
-      {
-        strcpy(menu_buffer,
-         "However, changes made here will take effect now.");
-        M_DrawMenuString(4, 192, CR_RED);
-      }
-  }
-      if (allow && setup_select)            // killough 8/15/98: Set new value
-  if (!(flags & (S_LEVWARN | S_PRGWARN)))
-    *def->current = *def->location.pi;
-    }
-#endif
 
   // There are different instruction messages depending on whether you
   // are changing an item or just sitting on it.
 
-  { // killough 11/98: reformatted
-    const char *s = "";
-    int color = CR_HILITE,x = setup_select ? color = CR_SELECT, flags & S_KEY ?
-      current_setup_menu[set_menu_itemon].m_mouse ||
-      current_setup_menu[set_menu_itemon].m_joy ?
-      (s = "Press key or button for this action", 49)                        :
-      (s = "Press key for this action", 84)                                  :
-      flags & S_YESNO  ? (s = "Press ENTER key to toggle", 78)               :
-      flags & S_WEAP   ? (s = "Enter weapon number", 97)                     :
-      flags & S_NUM    ? (s = "Enter value. Press ENTER when finished.", 37) :
-      flags & S_COLOR  ? (s = "Select color and press enter", 70)            :
-      flags & S_CRITEM ? (s = "Enter value", 125)                            :
-      flags & S_CHAT   ? (s = "Type/edit chat string and Press ENTER", 43)   :
-      flags & S_FILE   ? (s = "Type/edit filename and Press ENTER", 52)      :
-      flags & S_RESET  ? 43 : 0  /* when you're changing something */        :
-      flags & S_RESET  ? (s = "Press ENTER key to reset to defaults", 43)    :
-      flags & S_CHOICE ? (s = "Press left or right to choose", 78)           :
-      (s = "Press Enter to Change", 91);
-    strcpy(menu_buffer, s);
-    M_DrawMenuString(x,20,color);
+  if (setup_select) {
+    switch (flags & (S_KEY | S_YESNO | S_WEAP | S_NUM | S_COLOR | S_CRITEM | S_CHAT | S_RESET | S_FILE | S_CHOICE)) {
+      case S_KEY:
+        // See if a joystick or mouse button setting is allowed for
+        // this item.
+        if (current_setup_menu[set_menu_itemon].m_mouse || current_setup_menu[set_menu_itemon].m_joy)
+          M_DrawStringCentered(160, 20, CR_SELECT, "Press key or button for this action");
+        else
+          M_DrawStringCentered(160, 20, CR_SELECT, "Press key for this action");
+        break;
+
+    case S_YESNO:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Press ENTER key to toggle");
+      break;
+    case S_WEAP:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Enter weapon number");
+      break;
+    case S_NUM:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Enter value. Press ENTER when finished.");
+      break;
+    case S_COLOR:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Select color and press enter");
+      break;
+    case S_CRITEM:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Enter value");
+      break;
+    case S_CHAT:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Type/edit chat string and Press ENTER");
+      break;
+    case S_FILE:
+      M_DrawStringCentered(160, 20, CR_SELECT, "Type/edit filename and Press ENTER");
+      break;
+    case S_CHOICE: 
+      M_DrawStringCentered(160, 20, CR_SELECT, "Press left or right to choose");
+      break;
+    case S_RESET:
+      break;
+#ifdef SIMPLECHECKS
+    default:
+      lprintf(LO_WARN,"Unrecognised menu item type %d", flags);
+#endif
+    }
+  } else {
+    if (flags & S_RESET)
+      M_DrawStringCentered(160, 20, CR_HILITE, "Press ENTER key to reset to defaults");
+    else
+      M_DrawStringCentered(160, 20, CR_HILITE, "Press Enter to Change");
   }
 }
 
@@ -3844,13 +3846,14 @@ setup_menu_t helpstrings[] =  // HELP screen strings
 
 #define SPACEWIDTH 4
 
-// M_DrawMenuString() draws the string in menu_buffer[]
+/* cph 2006/08/06
+ * M_DrawString() is the old M_DrawMenuString, except that it is not tied to
+ * menu_buffer - no reason to force all the callers to write into one array! */
 
-void M_DrawMenuString(int cx, int cy, int color)
+static void M_DrawString(int cx, int cy, int color, const char* ch)
 {
   int   w;
   int   c;
-  char* ch = menu_buffer;
 
   while (*ch) {
     c = *ch++;         // get next char
@@ -3875,10 +3878,17 @@ void M_DrawMenuString(int cx, int cy, int color)
   }
 }
 
+// M_DrawMenuString() draws the string in menu_buffer[]
+
+static void M_DrawMenuString(int cx, int cy, int color)
+{
+    M_DrawString(cx, cy, color, menu_buffer);
+}
+
 // M_GetPixelWidth() returns the number of pixels in the width of
 // the string, NOT the number of chars in the string.
 
-int M_GetPixelWidth(char* ch)
+static int M_GetPixelWidth(const char* ch)
 {
   int len = 0;
   int c;
@@ -3896,6 +3906,11 @@ int M_GetPixelWidth(char* ch)
   }
   len++; // replace what you took away on the last char only
   return len;
+}
+
+static void M_DrawStringCentered(int cx, int cy, int color, const char* ch)
+{
+    M_DrawString(cx - M_GetPixelWidth(ch)/2, cy, color, ch);
 }
 
 //
